--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 $ make
 
 $ ./replay.out trace1
+
+
+   Framework provided by - Xingbo Wu - https://github.com/wuxb45 
+                                       https://github.com/wuxb45/trietoy
